--- a/css/styles.css
+++ b/css/styles.css
@@ -337,3 +337,12 @@ button {
 
 .message-custom-tiles {
   font-size: 2.0rem; }
+
+/* table of contents 
+---------------------------------------
+
+0. Responsiveness tablet
+1. Responsiveness mobile
+
+/* 0 Responsiveness Tablet */
+/* 0.1 Game area */
