--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,482 +1,2 @@
-/* table of contents 
----------------------------------------
-
-0. default settings
-0.1 full reset
-0.2 setting rem value
-1.3 styling variables 
-
-1. identity
----------------------------------------
-1.1 colors
-1.2 font
-
-2. css styling support classes
----------------------------------------
-2.1 grid
-2.2 flex-box
-
-3. css styling individual components
----------------------------------------
-3.1 memory block styling
-3.2 button styling
-3.3 score styling
-3.4 text box styling
-*/
-
-
-/* 0 default settings */
-/* 0.1 full reset */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-
-
-/* 0.2 setting rem value */
-html {
-    font-size: 62.5%;
-}
-
-/* 0.3 styling variables */
-$box-shadow-generic: 0px 0px 10px rgba(0, 0, 0, 0.2);
-$box-shadow-active-button: 0px 0px 10px rgba(28, 115, 195, 0.2);
-
-/* 1. identity
-
-/* 1. colors */
-$color-primary: #1C73C3;
-$color-secondary: #ECF6FF;
-$color-tertiary: #A5D8FF;
-$color-quatenary: #ffffff;
-$color-quinary: #08223a;
-$color-primary-shade: #1968b0;
-
-/* 1.2 fonts */
-
-$font-family: 'Poppins', sans-serif;
-
-p {
-    font-size: 2rem;
-    color: $color-quinary;
-    font-family: $font-family;
-}
-
-h2 {
-    color: $color-quinary;
-    font-family: $font-family;
-    font-weight: 500;
-}
-
-button {
-    font-family: $font-family;
-}
-
-/* 1.4 focus */
-
-*:focus {
-    outline: 0.2rem solid $color-quinary;
-}
-
-
-
-
-/* 2. generic support classes */
-/* 2.1 grid */
-
-.grid-col {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-}
-
-/* 2.2 flex-box */
-
-.center-flex--horizontal {
-    display: flex;
-    justify-content: center;
-}
-
-
-.center-flex {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.row-reverse-flex {
-    flex-direction: column-reverse;
-}
-
-.wrap-flex {
-    flex-wrap: wrap;
-}
-
-/* 2.3 buttons */
-
-.btn {
-    padding: 1.1rem 6rem;
-    font-size: 2rem;
-    background-color: $color-primary;
-    color: $color-quatenary;
-    border-radius: 20px;
-    border: none;
-    box-shadow: $box-shadow-generic;
-}
-
-.btn:hover {
-    background-color: $color-primary-shade;
-    transition: 0.3s;
-    cursor: pointer;
-}
-
-
-.btn-secondary {
-    padding: 1.1rem 6rem;
-    font-size: 2rem;
-    border: 0.2rem solid $color-primary;
-    color: $color-primary;
-    border-radius: 20px;
-    box-shadow: $box-shadow-generic;
-
-}
-
-.btn-secondary:hover {
-    background-color: $color-primary;
-    color: $color-secondary;
-    transition: 0.3s;
-    cursor: pointer;
-}
-
-/* 2.4 padding, margins, gaps & align */
-
-$corner-margins: 0rem 5rem 5rem 5rem;
-
-.text-align-center {
-    text-align: center;
-}
-
-.horizontal-center-absolute {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%)
-}
-
-/* 2.4.1 margins */
-
-.margin--10 {
-    margin: 0rem 10%;
-}
-
-.margin--15 {
-    margin: 0rem 15%;
-}
-
-.margin--20 {
-    margin: 0rem 20%;
-}
-
-.margin--25 {
-    margin: 0rem 25%;
-}
-
-.margin--30 {
-    margin: 0rem 30%;
-}
-
-/* 2.4.2 gaps */
-
-.gap--3 {
-    gap: 3rem;
-}
-
-.gap--2 {
-    gap: 2rem;
-}
-
-.gap--1 {
-    gap: 1.5rem;
-}
-
-
-/* 2.5 hide display */
-
-.hidden {
-    visibility: hidden;
-    opacity: 0;
-
-    transition: visibility 0s, opacity 0.5s ease-out;
-}
-
-.active-window {
-    visibility: visible;
-    opacity: 1;
-}
-
-
-/* 3. css styling individual components of the game area*/
-
-/* 3.1 memory block styling*/
-
-.memory-block {
-    border-radius: 1rem;
-    background-color: $color-quatenary;
-    box-shadow: $box-shadow-generic;
-}
-
-.memory-block-height--10 {
-    height: 10rem;
-}
-
-.memory-block-height--5 {
-    height: 5rem;
-}
-
-.memory-block-height--3 {
-    height: 3rem;
-}
-
-
-.memory-block-:active {
-    background-color: $color-primary;
-    box-shadow: $box-shadow-generic;
-}
-
-
-
-.memory-block-area {
-    padding: 0rem 0rem 5rem 0rem;
-}
-
-
-/* 3.1.1 active memory block styling*/
-
-.active {
-    background-color: $color-primary;
-}
-
-
-/* 3.2 game area styling*/
-
-
-.default-box {
-
-    width: 120rem;
-    height: 90vh;
-
-    margin: 0rem 2%;
-
-    background-color: $color-secondary;
-    border-radius: 20px;
-    box-shadow: $box-shadow-generic;
-    /*
-    position: relative;
-    */
-
-    position: absolute;
-
-
-}
-
-.area-box-styling {
-    margin: auto;
-}
-
-
-.memory-block-and-start {
-    width: 100%;
-    height: auto;
-}
-
-.game-box-grid {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 20rem 3fr 1fr;
-}
-
-
-/* 3.3 text box styling */
-
-
-.text-box {
-
-    justify-self: center;
-    align-self: center;
-
-    /*
-    position: absolute;
-    top: 10rem;
-    */
-
-}
-
-.message-text {
-    font-size: 2.3rem;
-}
-
-/* 3.4 styling of the bottom section of the game area */
-
-.bottom-area {
-    display: flex;
-    justify-content: space-between;
-}
-
-/* 3.4.1 score styling*/
-
-.scores {
-    align-self: end;
-}
-
-
-.scores-box {
-    background-color: $color-quatenary;
-    padding: 2.5rem;
-    border-radius: 20px;
-    width: 25rem;
-    justify-self: left;
-    box-shadow: $box-shadow-generic;
-    margin: $corner-margins;
-}
-
-.current-score {
-    padding-bottom: 1rem;
-}
-
-.high-score-text {
-    margin: 0rem 2.5rem 2.5rem 7.5rem;
-}
-
-/* 3.4.2 highscore modal styling*/
-
-.high-score-modal-background {
-    background-color: rgba(0, 0, 0, 0.8);
-    position: absolute;
-    height: 100vh;
-    width: 100vw;
-}
-
-.high-score-modal-box {
-    background: $color-secondary;
-    border-radius: 20px;
-
-    height: 70%;
-    width: 50%;
-
-    position: relative;
-    flex-direction: column;
-
-}
-
-.high-score-modal-box h2 {
-    font-size: 3.5rem;
-    margin: 0rem 0rem;
-
-}
-
-.high-score-modal-box p {
-    font-size: 2.5rem;
-    margin: 2rem 0rem;
-
-}
-
-.high-score-applause-gif {
-
-    width: 80%;
-    max-height: 45rem;
-
-    /*
-    width: 80%;
-    bottom: 0;
-    margin-bottom: 5rem;
-    */
-
-}
-
-/* 3.4.3 quit button*/
-
-.btn-quit {
-    margin: $corner-margins;
-}
-
-.support-quit-button {
-    display: flex;
-    align-items: end;
-}
-
-
-
-/* 4 styling body background */
-
-
-.background {
-    background: linear-gradient(125deg, rgba(28, 115, 195, 1) 0%, rgba(165, 216, 255, 1) 100%);
-    width: 100vw;
-    height: 100vh;
-}
-
-
-/* 5. styling difficulty select menu */
-
-.difficulty-select {
-    gap: 2rem;
-}
-
-.btn-difficulty {
-    width: 17rem;
-    padding: 1.1rem 0rem;
-    text-align: center;
-}
-
-.difficulty-text {
-    flex-basis: 100%;
-    flex-wrap: wrap;
-    text-align: center;
-    padding-bottom: 8rem;
-}
-
-.difficulty-text h2 {
-    color: $color-quinary;
-    font-size: 3rem;
-}
-
-/* 5.1 styling custom difficulty menu */
-
-
-.btn-previous {
-    position: absolute;
-    bottom: 0rem;
-    left: 0rem;
-    margin: $corner-margins;
-}
-
-.custom-difficulty-text h2 {
-    font-size: 3rem;
-    padding-bottom: 2rem;
-}
-
-.custom-tile-input-field {
-    background-color: $color-secondary;
-    color: $color-quinary;
-    border: none;
-    border-bottom: 0.2rem solid $color-primary;
-    outline: none;
-    height: 4rem;
-    width: 10rem;
-    text-align: center;
-    font-size: 3rem;
-    margin-bottom: 2rem;
-}
-
-.select-tiles-area {
-    position: relative;
-}
-
-.text-box-custom {
-    width: 100%;
-    margin-top: 2rem;
-}
-
-.message-custom-tiles {
-    font-size: 2.0rem;
-}
+@import 'layouts/mainLayout';
+@import 'layouts/responsive';
