--- a/src/scss/layouts/mainLayout.scss
+++ b/src/scss/layouts/mainLayout.scss
@@ -133,36 +133,36 @@ button {
 .btn {
     padding: 1.1rem 6rem;
     font-size: 2rem;
-    background-color: $color-primary;
-    color: $color-quatenary;
     border-radius: 20px;
-    border: none;
-    box-shadow: $box-shadow-generic;
+    font-family: $font-family;
 }
 
 .btn:hover {
-    background-color: $color-primary-shade;
     transition: 0.3s;
     cursor: pointer;
 }
 
+.btn-primary {
+    background-color: $color-primary;
+    color: $color-quatenary;
+    border: none;
+    box-shadow: $box-shadow-generic;
+}
+
+.btn-primary:hover {
+    background-color: $color-primary-shade;
+}
 
 
 .btn-secondary {
-    padding: 1.1rem 6rem;
-    font-size: 2rem;
     border: 0.2rem solid $color-primary;
     color: $color-primary;
-    border-radius: 20px;
     box-shadow: $box-shadow-generic;
-
 }
 
 .btn-secondary:hover {
     background-color: $color-primary;
     color: $color-secondary;
-    transition: 0.3s;
-    cursor: pointer;
 }
 
 /* 2.4 padding, margins, gaps & align */
