--- a/src/scss/layouts/mainLayout.scss
+++ b/src/scss/layouts/mainLayout.scss
@@ -168,7 +168,7 @@ button {
 
 /* 2.4 padding, margins, gaps & align */
 
-$corner-margins: 0rem 5rem 5rem 5rem;
+$corner-margins: 5rem;
 
 .text-align-center {
     text-align: center;
@@ -310,6 +310,7 @@ $corner-margins: 0rem 5rem 5rem 5rem;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 20rem 3fr 1fr;
+    align-items: center;
 }
 
 
@@ -343,6 +344,7 @@ $corner-margins: 0rem 5rem 5rem 5rem;
 
 .scores {
     align-self: end;
+    position: relative;
 }
 
 
@@ -361,7 +363,10 @@ $corner-margins: 0rem 5rem 5rem 5rem;
 }
 
 .high-score-text {
-    margin: 0rem 2.5rem 2.5rem 7.5rem;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 1.5rem;
 }
 
 /* 3.4.2 highscore modal styling*/
