--- a/src/scss/layouts/responsive.scss
+++ b/src/scss/layouts/responsive.scss
@@ -165,6 +165,10 @@
         order: 2;
     }
 
+    .btn-quit {
+        margin: 0rem 5rem 5rem 5rem;
+    }
+
     /* 3.4 highscore modal */
 
     .high-score-modal-box {
@@ -172,6 +176,8 @@
         width: 90%;
 
     }
+
+
 
 
     /* 3.5 Difficulty select menu */
