--- a/src/scss/layouts/mainLayout.scss
+++ b/src/scss/layouts/mainLayout.scss
@@ -440,7 +440,7 @@ $corner-margins: 5rem;
 
 /* 5. styling difficulty select menu */
 
-.difficulty-select {
+.difficulty-buttons {
     gap: 2rem;
 }
 
