add resize responsive class for margin--25

--- a/src/scss/layouts/responsive.scss
+++ b/src/scss/layouts/responsive.scss
@@ -141,6 +141,10 @@
         margin: 0rem 10%;
     }
 
+    .memory-block-and-start .margin--25 {
+        margin: 0rem 7.5%;
+    }
+
     .memory-block-and-start .margin--20 {
         margin: 0rem 7.5%;
     }
