--- a/src/scss/layouts/responsive.scss
+++ b/src/scss/layouts/responsive.scss
@@ -2,234 +2,241 @@
 ---------------------------------------
 
 1. Responsiveness tablet
-2. Responsiveness mobile
+---------------------------------------
 
-1 Responsiveness Tablet 1281px 
+1.1 general resize by changing the font size in html
+1.2 Default box resizing
+1.3 game area
+1.3.1. memory blocks styling
+1.4 highscore modal
+
+
+2. Responsiveness Tablet (801px) 
+---------------------------------------
+
+2.1 general resize by changing the font size in html
+2.2 Default box resizing  
+2.3. game area 
+2.3.1 memory blocks styling 
+2.4. Difficulty select menu 
+
+
+3. Responsiveness Mobile 641px 
+---------------------------------------
+
+3.1 general resize by changing the font size in html
+3.2 Default box resizing 
+3.3. game area
+3.3.1 game area layout 
+3.3.1 memory blocks styling
+3.3.1.1 memory blocks styling wdith
+3.3.1.2 memory blocks styling height
+3.3.2 bottom area
+3.4 highscore modal
+3.5 Difficulty select menu
+3.6 Custom difficulty select menu
 
 */
 
-@media (max-width:1281px) {
+@media (max-width: 1281px) {
+  /* 1.1 general resize by changing the font size in html*/
+  html {
+    font-size: 60%;
+  }
 
-    /* 1.1 general resize by changing the font size in html*/
-    html {
-        font-size: 60%;
-    }
+  /* 1.2 Default box resizing  */
+  .default-box {
+    width: 90vw;
+    height: 90vh;
 
-    /* 1.2 Default box resizing  */
-    .default-box {
+    margin: 0rem 10rem;
+  }
 
-        width: 90vw;
-        height: 90vh;
+  /* 1.3 game area */
+  /* 1.3.1. memory blocks styling */
 
-        margin: 0rem 10rem;
-    }
+  .memory-block-and-start .margin--30 {
+    margin: 0rem 25%;
+  }
 
-    /* 1.3 game area */
-    /* 1.3.1. memory blocks styling */
+  .memory-block-and-start .margin--20 {
+    margin: 0rem 15%;
+  }
 
-    .memory-block-and-start .margin--30 {
-        margin: 0rem 25%;
-    }
+  .memory-block-and-start .margin--15 {
+    margin: 0rem 10%;
+  }
 
-    .memory-block-and-start .margin--20 {
-        margin: 0rem 15%;
-    }
+  .memory-block-and-start .margin--10 {
+    margin: 0rem 5%;
+  }
 
-    .memory-block-and-start .margin--15 {
-        margin: 0rem 10%;
-    }
+  /* 1.4 highscore modal */
 
-    .memory-block-and-start .margin--10 {
-        margin: 0rem 5%;
-    }
-
-    /* 1.4 highscore modal */
-
-    .high-score-modal-box {
-        height: 70%;
-        width: 70%;
-    }
-
+  .high-score-modal-box {
+    height: 70%;
+    width: 70%;
+  }
 }
-
 
 /*
 2. Responsiveness Tablet 801px 
 */
 
-@media (max-width:801px) {
+@media (max-width: 801px) {
+  /* 2.1 general resize by changing the font size in html*/
+  html {
+    font-size: 55%;
+  }
 
-    /* 2.1 general resize by changing the font size in html*/
-    html {
-        font-size: 55%;
-    }
+  /* 2.2 Default box resizing  */
+  .default-box {
+    width: 92.5vw;
+    height: 92.5vh;
+  }
 
-    /* 2.2 Default box resizing  */
-    .default-box {
+  /* 2.3. game area */
+  /* 2.3.1 memory blocks styling */
 
-        width: 92.5vw;
-        height: 92.5vh;
+  .memory-block-and-start .margin--30 {
+    margin: 0rem 15%;
+  }
 
-    }
+  .memory-block-and-start .margin--20 {
+    margin: 0rem 10%;
+  }
 
-    /* 2.3. game area */
-    /* 2.3.1 memory blocks styling */
+  .memory-block-and-start .margin--15 {
+    margin: 0rem 10%;
+  }
 
-    .memory-block-and-start .margin--30 {
-        margin: 0rem 15%;
-    }
+  .memory-block-and-start .margin--10 {
+    margin: 0rem 5%;
+  }
 
-    .memory-block-and-start .margin--20 {
-        margin: 0rem 10%;
-    }
+  /* 2.4. Difficulty select menu */
 
-    .memory-block-and-start .margin--15 {
-        margin: 0rem 10%;
-    }
-
-    .memory-block-and-start .margin--10 {
-        margin: 0rem 5%;
-    }
-
-
-    /* 2.4. Difficulty select menu */
-
-    .difficulty-buttons {
-
-        flex-basis: 60%;
-        gap: 4rem;
-
-    }
-
+  .difficulty-buttons {
+    flex-basis: 60%;
+    gap: 4rem;
+  }
 }
 
+/* 3. Responsiveness Mobile 641px */
 
-/*
-3. Responsiveness Mobile 641px 
-*/
+@media (max-width: 585px) {
+  /* 3.1 general resize by changing the font size in html*/
+  html {
+    font-size: 50%;
+  }
 
-@media (max-width:585px) {
+  /* 3.2 Default box resizing  */
+  .default-box {
+    width: 95vw;
+    height: 95vh;
+  }
 
-    /* 3.1 general resize by changing the font size in html*/
-    html {
-        font-size: 50%;
-    }
+  /* 3.3. game area */
+  /* 3.3.1 game area layout */
 
-    /* 3.2 Default box resizing  */
-    .default-box {
+  .game-box-grid {
+    grid-template-rows: 12rem 3fr 1fr;
+  }
 
-        width: 95vw;
-        height: 95vh;
+  /*message text */
+  .text-box {
+    margin: 0rem 2rem;
+  }
 
-    }
+  /* 3.3.1 memory blocks styling */
+  /* 3.3.1.1 memory blocks styling width*/
+  .memory-block-and-start .margin--30 {
+    margin: 0rem 10%;
+  }
 
-    /* 3.3. game area */
-    /* 3.3.1 game area layout */
+  .memory-block-and-start .margin--25 {
+    margin: 0rem 7.5%;
+  }
 
-    .game-box-grid {
-        grid-template-rows: 12rem 3fr 1fr;
-    }
+  .memory-block-and-start .margin--20 {
+    margin: 0rem 7.5%;
+  }
 
-    /*message text */
-    .text-box {
-        margin: 0rem 2rem;
-    }
+  .memory-block-and-start .margin--15 {
+    margin: 0rem 7.5%;
+  }
 
-    /* 3.3.1 memory blocks styling */
-    /* 3.3.1.1 memory blocks styling wdith*/
-    .memory-block-and-start .margin--30 {
-        margin: 0rem 10%;
-    }
+  .memory-block-and-start .margin--10 {
+    margin: 0rem 5%;
+  }
 
-    .memory-block-and-start .margin--25 {
-        margin: 0rem 7.5%;
-    }
+  .memory-block-area {
+    padding: 0rem 0rem 3rem 0rem;
+  }
 
-    .memory-block-and-start .margin--20 {
-        margin: 0rem 7.5%;
-    }
+  /* 3.3.1.2 memory blocks styling height*/
 
-    .memory-block-and-start .margin--15 {
-        margin: 0rem 7.5%;
-    }
+  .memory-block-height--10 {
+    height: 5rem;
+  }
 
-    .memory-block-and-start .margin--10 {
-        margin: 0rem 5%;
-    }
+  .memory-block-height--5 {
+    height: 3.5rem;
+  }
 
-    .memory-block-area {
-        padding: 0rem 0rem 3rem 0rem;
-    }
+  .memory-block-height--3 {
+    height: 2.5rem;
+  }
 
-    /* 3.3.1.2 memory blocks styling wdith*/
+  /* 3.3.2 bottom area */
 
-    .memory-block-height--10 {
-        height: 5rem;
-    }
+  /* center elements */
+  .bottom-area {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 
-    .memory-block-height--5 {
-        height: 3.5rem;
-    }
+  .support-quit-button {
+    flex-basis: 100%;
+    justify-content: center;
+  }
 
-    .memory-block-height--3 {
-        height: 2.5rem;
-    }
+  /* switch position scorebox and quit button */
+  .support-quit-button {
+    order: 2;
+  }
 
-    /* 3.3.2 bottom area */
+  .btn-quit {
+    margin: 0rem 5rem 2rem 5rem;
+  }
 
-    /* center elements */
-    .bottom-area {
-        flex-wrap: wrap;
-        justify-content: center;
-    }
+  .scores-box {
+    margin: 0rem 5rem 2rem 5rem;
+    padding: 1.5rem 2.5rem;
+  }
 
-    .support-quit-button {
-        flex-basis: 100%;
-        justify-content: center;
-    }
+  .high-score-text {
+    top: -3rem;
+  }
 
-    /* switch position scorebox and quit button */
-    .support-quit-button {
-        order: 2;
-    }
+  /* 3.4 highscore modal */
 
-    .btn-quit {
-        margin: 0rem 5rem 2rem 5rem;
-    }
+  .high-score-modal-box {
+    height: 60%;
+    width: 90%;
+  }
 
-    .scores-box {
-        margin: 0rem 5rem 2rem 5rem;
-        padding: 1.5rem 2.5rem;
-    }
+  /* 3.5 Difficulty select menu */
+  .difficulty-buttons {
+    flex-basis: 50%;
+    gap: 6rem;
+  }
 
-    .high-score-text {
-        top: -3rem;
-    }
+  /* 3.5 Custom difficulty select menu */
 
-
-    /* 3.4 highscore modal */
-
-    .high-score-modal-box {
-        height: 60%;
-        width: 90%;
-
-    }
-
-
-    /* 3.5 Difficulty select menu */
-    .difficulty-buttons {
-
-        flex-basis: 50%;
-        gap: 6rem;
-
-    }
-
-    /* 3.5 Custom difficulty select menu */
-
-    .btn-previous {
-        left: 50%;
-        transform: translate(-50%, -50%);
-        margin: 0rem;
-    }
-
+  .btn-previous {
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0rem;
+  }
 }
