--- a/src/scss/layouts/mainLayout.scss
+++ b/src/scss/layouts/mainLayout.scss
@@ -265,8 +265,9 @@ $corner-margins: 5rem;
 .default-box {
   width: 120rem;
   height: 90vh;
+  // min-height: auto;
 
-  margin: 0rem 2%;
+  // margin: 0rem 2%;
 
   background-color: $color-secondary;
   border-radius: 20px;
@@ -276,6 +277,9 @@ $corner-margins: 5rem;
     */
 
   position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .area-box-styling {
@@ -299,11 +303,7 @@ $corner-margins: 5rem;
 .text-box {
   justify-self: center;
   align-self: center;
-
-  /*
-    position: absolute;
-    top: 10rem;
-    */
+  padding: 5rem;
 }
 
 .message-text {
