--- a/src/scss/layouts/responsive.scss
+++ b/src/scss/layouts/responsive.scss
@@ -1,7 +1,7 @@
 /* table of contents 
 ---------------------------------------
 
-1. Responsiveness tablet
+1. Responsiveness tablet (1281px)
 ---------------------------------------
 
 1.1 general resize by changing the font size in html
@@ -38,6 +38,7 @@
 
 */
 
+/* 1. Responsiveness tablet 1281px */
 @media (max-width: 1281px) {
   /* 1.1 general resize by changing the font size in html*/
   html {
@@ -47,9 +48,9 @@
   /* 1.2 Default box resizing  */
   .default-box {
     width: 90vw;
-    height: 90vh;
+    // height: 90vh;
 
-    margin: 0rem 10rem;
+    // margin: 0rem 10rem;
   }
 
   /* 1.3 game area */
@@ -92,7 +93,7 @@
   /* 2.2 Default box resizing  */
   .default-box {
     width: 92.5vw;
-    height: 92.5vh;
+    // height: 92.5vh;
   }
 
   /* 2.3. game area */
@@ -211,7 +212,7 @@
   }
 
   .scores-box {
-    margin: 0rem 5rem 2rem 5rem;
+    margin: 1rem 5rem 2rem 5rem;
     padding: 1.5rem 2.5rem;
   }
 
@@ -238,5 +239,118 @@
     left: 50%;
     transform: translate(-50%, -50%);
     margin: 0rem;
+  }
+}
+
+/* 4. responsiveness width higher than 1200px */
+@media screen and (orientation: landscape) and (max-height: 870px) and (min-width: 1200px) {
+  #game-area {
+    width: 90vw;
+    height: auto;
+    margin-top: 80px;
+  }
+
+  .game-box-grid {
+    display: block;
+  }
+}
+
+@media screen and (orientation: landscape) and (max-height: 610px) and (min-width: 1200px) {
+  #game-area {
+    width: 90vw;
+    height: auto;
+    margin-top: 180px;
+  }
+
+  .game-box-grid {
+    display: block;
+  }
+}
+
+@media screen and (orientation: landscape) and (max-height: 410px) and (min-width: 1200px) {
+  #game-area {
+    width: 90vw;
+    height: auto;
+    margin-top: 280px;
+  }
+
+  .game-box-grid {
+    display: block;
+  }
+}
+
+/* 5. responsiveness width 1200px - 660px*/
+
+@media screen and (orientation: landscape) and (max-height: 820px) and (max-width: 1199px) and (min-width: 660px) {
+  #game-area {
+    width: 90vw;
+    height: auto;
+    margin-top: 50px;
+  }
+
+  .game-box-grid {
+    display: block;
+  }
+}
+
+@media screen and (orientation: landscape) and (max-height: 660px) and (max-width: 1199px) and (min-width: 660px) {
+  #game-area {
+    width: 90vw;
+    height: auto;
+    margin-top: 120px;
+  }
+
+  .game-box-grid {
+    display: block;
+  }
+}
+
+@media screen and (orientation: landscape) and (max-height: 475px) and (max-width: 1199px) and (min-width: 660px) {
+  #game-area {
+    width: 90vw;
+    height: auto;
+    margin-top: 220px;
+  }
+
+  .game-box-grid {
+    display: block;
+  }
+}
+
+/* 6. responsiveness width lower than 660px*/
+
+@media only screen and (max-height: 820px) and (max-width: 659px) and (min-width: 420px) {
+  #game-area {
+    width: 90vw;
+    height: auto;
+    margin-top: 0px;
+  }
+
+  .game-box-grid {
+    display: block;
+  }
+}
+
+@media only screen and (max-height: 550px) and (max-width: 659px) and (min-width: 420px) {
+  #game-area {
+    width: 90vw;
+    height: auto;
+    margin-top: 75px;
+  }
+
+  .game-box-grid {
+    display: block;
+  }
+}
+
+@media only screen and (max-height: 320px) and (max-width: 659px) and (min-width: 420px) {
+  #game-area {
+    width: 90vw;
+    height: auto;
+    margin-top: 150px;
+  }
+
+  .game-box-grid {
+    display: block;
   }
 }
